--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Learing Git!!</h1>
+    <h2>Html and JavaScript</h2>
+    <h3>the next thing is react</h3>
     <script src="app.js"></script>
   </body>
 </html>
