adding p and change it's color to white

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Learing Git!!</h1>
     <h2>Html and JavaScript</h2>
     <h3>the next thing is react</h3>
+    <p class="pChange">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab suscipit dignissimos aut corporis, provident ut atque maxime, et pariatur neque quam? Quo quas temporibus alias inventore ea minus sunt sed.</p>
     <script src="app.js"></script>
   </body>
 </html>
